# matrix-types

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
.github/workflows/: run-tests.yml
docs/: api.rst  basics.rst  conf.py  index.rst  install.rst  preliminaries.rst  usage.rst
matrices/: __init__.py  _base.py  _formatter.py  _frozen_matrix.py  _iterutils.py  _matrix.py  _types.py  formatter.py
matrix_types/: __init__.py  _base.py  _formatter.py  _frozen_matrix.py  _matrix.py  _types.py
tests/: common.py  test_frozenmatrix.py  test_matrix.py
