[tool.poetry]
name = "matrix-types"
version = "0.1.0"
authors = ["Florian Breit <florian@florian.me.uk>"]
license = "MIT"
description = "Matrix and FrozenMatrix types in pure Python."
readme = "README.rst"
packages = [{include = "matrices"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
tox = "^4.5.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-rtd-theme = "^1.2.0"
sphinx-toolbox = "^3.4.0"

[tool.flake8]
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list =
    py311
    type

[testenv]
deps = pytest
commands = pytest tests

[testenv:type]
deps = mypy
commands = mypy matrices
"""